# parakeet-question-answer

./: README.md  pyproject.toml  start.sh
src/parakeet_qa/: __init__.py  audio_capture.py  buffer.py  cli.py  config.py  display.py  ollama_client.py  question_detector.py  transcriber.py
src/parakeet_qa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
